creative, wraps, no fiddler
other stuff but main things :)
readme edited too

--- a/FortniteGame/Plugins/GameFeatures/ValkyriePIE/ValkyriePIE.uplugin
+++ b/FortniteGame/Plugins/GameFeatures/ValkyriePIE/ValkyriePIE.uplugin
@@ -23,11 +23,19 @@
 			"Enabled": true
 		},
 		{
+			"Name": "MochaCoffee",
+			"Enabled": true
+		},
+		{
 			"Name": "SaveTheWorld",
 			"Enabled": true
 		},
 		{
 			"Name": "Energy",
+			"Enabled": true
+		},
+		{
+			"Name": "Valet",
 			"Enabled": true
 		}
 	]
